--- a/backend/services/sensor_force.service
+++ b/backend/services/sensor_force.service
@@ -3,7 +3,7 @@ Description=Sensor Force Service
 After=mosquitto.service multi-user.target
 
 [Service]
-User=root
+User=pi
 Type=idle
 ExecStart=/usr/bin/python3 /home/pi/hangboard/backend/sensor_force.py 
 StandardOutput=file:/var/log/sensor_force_stdout.log
