--- a/backend/services/hangboard_sensor_force.service
+++ b/backend/services/hangboard_sensor_force.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Sensor Force Service
+Description=Hangboard Sensor Force Service
 After=mosquitto.service multi-user.target
 
 [Service]
