--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,9 +2,9 @@ smbus
 tabulate
 RPi.GPIO
 svglib
-scipy
+#scipy # FIXME - conflicts on raspi
 numpy
 pymongo
-paho-mqtt
+#paho-mqtt # FIXME - conflicts on raspi
 matplotlib
 pandas
