--- a/backend/sensor-force/Makefile
+++ b/backend/sensor-force/Makefile
@@ -1,2 +1,2 @@
 api-doc:
-	docker run --rm -it -v $(PWD)/sensor_force_api.yaml:/app/asyncapi.yml -v $(PWD)/api:/app/output asyncapi/generator  -o /app/output /app/asyncapi.yml @asyncapi/html-template 
+	docker run --rm -it -v $(PWD)/sensor_force_api.yaml:/app/asyncapi.yml -v $(PWD)/api:/app/output asyncapi/generator  -o /app/output /app/asyncapi.yml @asyncapi/html-template --force-write
