--- a/backend/sensor-force/hangboard.ini
+++ b/backend/sensor-force/hangboard.ini
@@ -4,9 +4,12 @@ pin_pd_sck1 = 27
 pin_dout2   = 5
 pin_pd_sck2 = 6
 
-referenceUnit1 = 321
-referenceUnit2 = 123
+referenceUnit1 = 1 
+#referenceUnit1 = 228500
+referenceUnit2 = 1
+#referenceUnit2 = 228500
 
 [MQTT]
-hostname    =   "raspi-hangboard"
+#hostname    =   "raspi-hangboard"
+hostname    =   "localhost"
 port        =   1883
