--- a/backend/sensor-force/hangboard.ini
+++ b/backend/sensor-force/hangboard.ini
@@ -10,6 +10,6 @@ referenceUnit2 = 1
 #referenceUnit2 = 228500
 
 [MQTT]
-#hostname    =   "raspi-hangboard"
-hostname    =   "localhost"
+#hostname    =   raspi-hangboard
+hostname    =   localhost
 port        =   1883
