--- a/backend/sensor-force/hangboard.ini
+++ b/backend/sensor-force/hangboard.ini
@@ -4,14 +4,14 @@ pin_pd_sck1 = 27
 pin_dout2   = 5
 pin_pd_sck2 = 6
 
-referenceWeight1 = 5
-referenceValue1 = 243189.78
-#referenceUnit1 = 1 
-#referenceUnit1 = 243189.78/5.
+referenceWeight1 = 5.
+referenceValue1 = 238436.69
+#referenceValue1 = 5
+
 referenceWeight2 = 5
-referenceValue2 = 237842.56
-#referenceUnit2 = 1
-#referenceUnit2 = 237842.56/5.
+referenceValue2 = 234541.29
+#referenceValue2 = 5
+
 
 [MQTT]
 #hostname    =   raspi-hangboard
