--- a/boards/Dockerfile
+++ b/boards/Dockerfile
@@ -1,9 +1,10 @@
 FROM python:3.8
 WORKDIR /app
-COPY backend/requirements.txt .
+COPY requirements.txt .
 RUN pip install -r requirements.txt
-COPY boards boards
-WORKDIR /app/backend
-
-CMD [ "python", "./run_ws.py" ]
+COPY board_data board_data
+COPY . . 
+RUN python3 ./board.py
+EXPOSE 5001
+CMD [ "flask", "run" , "--port=5001"]
 
