--- a/boards/Makefile
+++ b/boards/Makefile
@@ -1,2 +1,15 @@
+api-doc:
+	echo "#FIXME"
+
 build:
-	docker build . -t boards
+	python3 ./board.py
+	echo Later: docker build . -t boards
+
+install:
+	service="hangboard_board.service"
+	echo "Install hangboard service for: hangboard_board.service" 
+	sudo cp ./hangboard_board.service /lib/systemd/system/
+	sudo chmod 644 /lib/systemd/system/hangboard_board.service
+	sudo systemctl daemon-reload
+	sudo systemctl enable hangboard_board.service
+	sudo systemctl restart hangboard_board.service
