--- a/boards/Makefile
+++ b/boards/Makefile
@@ -5,6 +5,9 @@ build:
 	python3 ./board.py
 	echo Later: docker build . -t boards
 
+install-raspi:
+	sudo apt-get -y install python3-flask
+
 install:
 	service="hangboard_board.service"
 	echo "Install hangboard service for: hangboard_board.service" 
