--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,10 +21,10 @@ jobs:
 #        with:
 #          username: ${{ secrets.DOCKERHUB_USERNAME }}
 #          password: ${{ secrets.DOCKERHUB_TOKEN }}
-#      -
-#        name: Build and push
-#        id: docker_build
-#        uses: docker/build-push-action@v2
-#        with:
+      -
+        name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
 #          push: true
-#          tags: user/app:latest
+          tags: user/app:latest
