--- a/backend/assets-delivery/hangboard_assets_delivery.service
+++ b/backend/assets-delivery/hangboard_assets_delivery.service
@@ -5,7 +5,7 @@ After=mosquitto.service multi-user.target
 [Service]
 User=pi
 Type=idle
-ExecStart=/usr/bin/python3 /home/pi/hangboard/backend/assets-delivery/app.py 
+ExecStart=/usr/bin/python3 /home/pi/hangboard/backend/assets-delivery/app.py --host=0.0.0.0 --port=5000
 StandardOutput=file:/var/log/assets_delivery_stdout.log
 StandardError=file:/var/log/assets_delivery_stderr.log
 
