--- a/backend/sensor-force/hangboard2.ini
+++ b/backend/sensor-force/hangboard2.ini
@@ -9,7 +9,7 @@ referenceValue1 = 224136.56
 #referenceValue1 = 5
 
 referenceWeight2 = 5
-referenceValue2 = -221892.56
+#referenceValue2 = 5
 #referenceValue2 = 5
 
 
