--- a/exercises/workouts/beastmaker-beasty.json
+++ b/exercises/workouts/beastmaker-beasty.json
@@ -8,6 +8,7 @@
             "Name": "Beasty 5a",
             "Type": "Strength, Crimp",
             "Description": "12 sets, 47:00 Minutes",
+            "Difficulty_Beastmaker": "Beginner",
             "Sets":
             [
                 { "Rest-to-Start": 5,         "Exercise": "Hang", 			    "Counter": 7, 	"Pause": 3,    "Reps": 7, "Left": "Jug", "Right": "Jug",   "Description": "", "No": 1, "Fingers": 4, "Grip": "Jug"} ,
@@ -22,6 +23,29 @@
                 { "Rest-to-Start": 150,       "Exercise": "Hang", 			    "Counter": 7, 	"Pause": 3,    "Reps": 7, "Left": "45mm", "Right": "45mm", "Description": "", "No": 10, "Fingers": "Front 3", "Grip": "Open"} ,
                 { "Rest-to-Start": 150,       "Exercise": "Hang", 			    "Counter": 7, 	"Pause": 3,    "Reps": 7, "Left": "45mm", "Right": "45mm", "Description": "", "No": 11, "Fingers": 4, "Grip": "Open"} ,
                 { "Rest-to-Start": 150,       "Exercise": "Hang", 			    "Counter": 7, 	"Pause": 3,    "Reps": 7, "Left": "45mm", "Right": "45mm", "Description": "", "No": 12, "Fingers": 4, "Grip": "Open"} 
+            ]
+        }
+        ,
+        {
+            "ID": "BEASTY-5B",
+            "Name": "Beasty 5b",
+            "Type": "Strength, Crimp",
+            "Description": "12 sets, 47:00 Minutes",
+            "Difficulty_Beastmaker": "Intermediate",
+            "Sets":
+            [
+                { "Rest-to-Start": 5,         "Exercise": "Hang", 			    "Counter": 7, 	"Pause": 3,    "Reps": 7, "Left": "45mm", "Right": "45mm",   "Description": "", "No": 1, "Fingers": 4, "Grip": "Half Crimp"} ,
+                { "Rest-to-Start": 150,       "Exercise": "Hang", 			    "Counter": 7, 	"Pause": 3,    "Reps": 7, "Left": "25° Sloper", "Right": "25° Sloper",   "Description": "", "No": 2, "Fingers": 4, "Grip": "Open"} ,
+                { "Rest-to-Start": 150,       "Exercise": "Hang", 			    "Counter": 7, 	"Pause": 3,    "Reps": 7, "Left": "45mm", "Right": "45mm", "Description": "", "No": 3, "Fingers": 4, "Grip": "Half Crimp"} ,
+                { "Rest-to-Start": 150,       "Exercise": "Hang", 			    "Counter": 7, 	"Pause": 3,    "Reps": 7, "Left": "30mm", "Right": "30mm", "Description": "", "No": 4, "Fingers": "Front 3", "Grip": "Open"} ,
+                { "Rest-to-Start": 150,       "Exercise": "Hang", 			    "Counter": 7, 	"Pause": 3,    "Reps": 7, "Left": "50mm", "Right": "50mm", "Description": "", "No": 5, "Fingers": "Middle 2", "Grip": "Open"} ,
+                { "Rest-to-Start": 360,       "Exercise": "Hang", 			    "Counter": 7, 	"Pause": 3,    "Reps": 7, "Left": "45mm", "Right": "45mm", "Description": "", "No": 6, "Fingers": 4, "Grip": "Open"} ,
+                { "Rest-to-Start": 150,       "Exercise": "Hang", 			    "Counter": 7, 	"Pause": 3,    "Reps": 7, "Left": "45mm", "Right": "45mm",   "Description": "", "No": 7, "Fingers": 4, "Grip": "Half Crimp"} ,
+                { "Rest-to-Start": 150,       "Exercise": "Hang", 			    "Counter": 7, 	"Pause": 3,    "Reps": 7, "Left": "25° Sloper", "Right": "25° Sloper",   "Description": "", "No": 8, "Fingers": 4, "Grip": "Open"} ,
+                { "Rest-to-Start": 150,       "Exercise": "Hang", 			    "Counter": 7, 	"Pause": 3,    "Reps": 7, "Left": "45mm", "Right": "45mm", "Description": "", "No": 9, "Fingers": 4, "Grip": "Half Crimp"} ,
+                { "Rest-to-Start": 150,       "Exercise": "Hang", 			    "Counter": 7, 	"Pause": 3,    "Reps": 7, "Left": "30mm", "Right": "30mm", "Description": "", "No": 10, "Fingers": "Front 3", "Grip": "Open"} ,
+                { "Rest-to-Start": 150,       "Exercise": "Hang", 			    "Counter": 7, 	"Pause": 3,    "Reps": 7, "Left": "50mm", "Right": "50mm", "Description": "", "No": 11, "Fingers": "Middle 2", "Grip": "Open"} ,
+                { "Rest-to-Start": 150,       "Exercise": "Hang", 			    "Counter": 7, 	"Pause": 3,    "Reps": 7, "Left": "45mm", "Right": "45mm", "Description": "", "No": 12, "Fingers": 4, "Grip": "Half Crimp"} 
             ]
         }
     ]
