--- a/frontend/display_7segment/Makefile
+++ b/frontend/display_7segment/Makefile
@@ -11,5 +11,5 @@ prepare:
 	echo "Enable SPI"
 	sudo sed -i 's/\#dtparam=spi=on/dtparam=spi=on/g' /boot/config.txt
 	sudo usermod -a -G spi,gpio pi
-	sudo apt-get -y install python-dev python-pip libfreetype6-dev libjpeg-dev
+	sudo apt-get -y install python-dev python-pip libfreetype6-dev libjpeg-dev libopenjp2-7
 	pip3 install luma.led_matrix
