--- a/frontend/display_7segment/hangboard_display_7segment.service
+++ b/frontend/display_7segment/hangboard_display_7segment.service
@@ -3,7 +3,7 @@ Description=Hangboard Display 7 Segment Service
 After=mosquitto.service multi-user.target
 
 [Service]
-User=pi
+User=root
 Type=idle
 ExecStart=/usr/bin/python3 /home/pi/hangboard/frontend/display_7segment/display.py 
 StandardOutput=file:/var/log/display_7segment_stdout.log
