--- a/backend/sensor-force/sensor_force_api.yaml
+++ b/backend/sensor-force/sensor_force_api.yaml
@@ -54,3 +54,49 @@ channels:
               type: number
               description: Rate of force development
               example: 12.2
+  hangboard/sensor/sensorstatus:
+    subscribe:
+      summary: Current sensor status, i.e. hang status.
+      operationId: GetCurrentSensorStatus
+      message:
+        name: Sensor Status
+        payload:
+          type: object
+          properties:
+            time:
+              type: integer
+              description: Timestamp in seconds.
+              example: 123412341234
+            HangChangeDetected:
+              type: string
+              description: Hang change detected.
+              examples: ["Hang", "NoHang"]
+            HangDetected:
+              type: string
+              description: Hang change detected.
+              examples: ["True", "False"]
+  hangboard/sensor/lastexercise:
+    subscribe:
+      summary: Summary of the last exercise.
+      operationId: GetLastExerciseStatistics
+      message:
+        name: Last Exercise
+        payload:
+          type: object
+          properties:
+            time:
+              type: integer
+              description: Timestamp in seconds.
+              example: 123412341234
+            LastHangTime:
+              type: number
+              description: Last hang time in seconds.
+              example: 123
+            LastPauseTime:
+              type: number
+              description: Last pause time in seconds.
+              example: 111              
+            MaximalLoad:
+              type: number
+              description: Maximal load in last exercise in kg.
+              example: 32      
