--- a/boards/Makefile
+++ b/boards/Makefile
@@ -9,6 +9,7 @@ build-images:
 
 requirements:
 	pip3 install -r requirements.txt
+	sudo apt-get -y install python3-numpy
 
 install:
 	service="hangboard_board.service"
