--- a/backend/database/Makefile
+++ b/backend/database/Makefile
@@ -1,6 +1,10 @@
 api-doc:
 	docker run --rm -it -v $(PWD)/database_api.yaml:/app/asyncapi.yml -v $(PWD)/api:/app/output asyncapi/generator  -o /app/output /app/asyncapi.yml @asyncapi/html-template --force-write
 
+prepare:
+	sudo apt-get -y install python-pandas
+
+
 install:
 	service="hangboard_record.service"
 	echo "Install hangboard service for: hangboard_record.service" 
